# Game-Engine-in-Cpp

./: .gitignore  .gitmodules  CMakeLists.txt
include/: Actor.h  Camera.h  CommonHeaders.h  Component.h  Core.h  Game.h  GameAction.h  Id.h  InputManager.h  Log.h  Math.h  Object3D.h  PrimitiveTypes.h  Renderer.h
src/: Actor.cpp  Camera.cpp  Component.cpp  Core.cpp  Game.cpp  GameAction.cpp  InputManager.cpp  Log.cpp  Math.cpp  Object3D.cpp  Renderer.cpp  main.cpp
